--- a/package.json
+++ b/package.json
@@ -15,36 +15,38 @@
 	"main": "./out/extension.js",
 	"contributes": {
 		"languages": [
-            {
-                "id": "prototxt",
-                "aliases": [
-                    "prototxt"
-                ],
-                "extensions": [
-                    "prototxt"
-                ]
-            }
+			{
+				"id": "prototxt",
+				"aliases": [
+					"prototxt"
+				],
+				"extensions": [
+					"prototxt"
+				]
+			}
 		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
+		"jison2js": "cd src/jison-prototxt && jison prototxt.jison",
+		"compile": "npm run jison2js && tsc -p ./",
 		"lint": "eslint src --ext ts",
-		"watch": "tsc -watch -p ./",
+		"watch": "npm run jison2js && tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.45.0",
-		"@types/glob": "^7.1.1",
+		"@types/glob": "^7.1.2",
 		"@types/mocha": "^7.0.2",
-		"@types/node": "^13.11.0",
+		"@types/node": "^13.13.12",
+		"@types/vscode": "^1.45.0",
+		"@typescript-eslint/eslint-plugin": "^2.34.0",
+		"@typescript-eslint/parser": "^2.34.0",
 		"eslint": "^6.8.0",
-		"@typescript-eslint/parser": "^2.30.0",
-		"@typescript-eslint/eslint-plugin": "^2.30.0",
 		"glob": "^7.1.6",
-		"mocha": "^7.1.2",
-		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0"
+		"jison": "^0.4.18",
+		"mocha": "^7.2.0",
+		"typescript": "^3.9.5",
+		"vscode-test": "^1.4.0"
 	}
 }
