--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "proto-dbg-str formatter",
 	"description": "protobuf debug string formatter",
 	"version": "0.1.0",
+	"publisher": "leolzheng",
 	"engines": {
 		"vscode": "^1.45.0"
 	},
